# late-night-sessions

./: .gitignore
rust/aoc_1/: Cargo.toml
rust/aoc_1/src/: main.rs
rust/aoc_2/: Cargo.toml
rust/aoc_2/src/: main.rs
rust/app/basic_search/basic_search/: Cargo.toml  get_started.db
rust/app/basic_search/basic_search/src/: main.rs
rust/app/secure-electron-template/next-tauri/: next.config.mjs  package-lock.json  package.json
rust/block/airdrop-project/: index.js  package-lock.json  package.json
rust/block/mycalculatorapp/: Anchor.toml
rust/block/mycalculatorapp/tests/: mycalculatorapp.ts
rust/bluetooth-phind/: Cargo.toml
rust/bluetooth-phind/src/: main.rs
rust/demo-tauri/: package-lock.json  package.json
rust/demo-tauri/src/: App.tsx
rust/demo-tauri/src-tauri/: Cargo.toml  tauri.conf.json
rust/demo-tauri/src-tauri/src/: main.rs
rust/doe-demo/: .press_release_callback  Cargo.toml  readme.md
rust/doe-demo/src/: main.rs
rust/first-app/: package-lock.json  package.json
rust/first-app/src-tauri/: tauri.conf.json
rust/game/invaders/src/: frame.rs  main.rs  render.rs
rust/get-req-yt/: Cargo.toml
rust/get-req-yt/src/: main.rs
rust/guessing_game/src/: main.rs
rust/ip_sniffer/src/: main.rs
rust/lib/localstore/: Cargo.toml  person.json
rust/lib/localstore/src/: main.rs
rust/pass-vault-as/: Cargo.toml
rust/pass-vault-as/src/: main.rs  pentry.rs
rust/proful1/: package.json
rust/proful1/src-tauri/: Cargo.toml  tauri.conf.json
rust/tauri-cli/: Cargo.toml
rust/tauri-cli/src/: main.rs
rust1/challenge_backend/: Cargo.toml  docker-compose.yml
rust1/challenge_backend/src/: constant.rs  main.rs  structs.rs
rust1/game/first-docker-app/: Dockerfile  README.md  docker-compose.yml
rust1/game/m1/: dev.sh
rust1/game/m1/api/: Cargo.toml
rust1/game/m1/frontend/: Cargo.toml  index.html  manifest.json  style.css
rust1/game/m1/frontend/src/: editnote.rs  form.rs  main.rs  notes.rs  products.rs  router.rs
rust1/game/ws/: Cargo.toml
rust1/game/ws/src/: main.rs
rust1/network/: Cargo.toml
rust1/network/src/: main.rs
rust1/rust-axum-postgres-api/: .env  Cargo.toml
rust1/rust-axum-postgres-api/migrations/: 20240422011023_init.down.sql  20240422011023_init.up.sql
rust1/rust-axum-postgres-api/nginx/: default.conf
rust1/rust-axum-postgres-api/src/: config.rs  handler.rs  main.rs  model.rs  route.rs  schema.rs
tauri/alpha/: Cargo.toml
tauri/alpha/src-tauri/: Cargo.toml  tauri.conf.json
(+165 files in other folders)
