[package]
name = "challenge_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
mongodb = { version = "2.8.2", default-features = false, features = ["async-std-runtime"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
bson = "2.3.0"
serde = "1.0.197"
futures-util = "0.3"


aws-config="1.2.0"
aws-sdk-s3 = "1.22.0"