[package]
name = "basic_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }


reqwest = {version = "0.10", features = ["blocking", "json"]}
error-chain = "0.12.4"
serde_json = "1.0"