[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }

yew-router = "0.17"
serde = "1.0.152"
serde_json = "1.0.91"
wasm-bindgen-futures = "0.4.33"
reqwest = { version = "0.11.13", features = ["json"] }
web-sys = {version = "0.3.60", features = ["HtmlInputElement"] }
gloo-console = "0.2.3"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4.24", features = ["serde"] }
gloo-net = "0.5.0"
futures = "0.3.30"
yew-hooks = "0.2.0"
